# backend

./: .augmentignore  .dockerignore  .env.development.example  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  ALEMBIC_DATABASE_MIGRATION_PLAN.md  ALEMBIC_WORKFLOW.md  ARCHITECTURE.md  Dockerfile  IMPROVEMENTS.md  JWT_Authentication_&_Authorization_System_Hardening_Plan.md  LICENSE  README.md  WARP.md  alembic.ini  docker-compose.mcp.yaml  docker-compose.prod.yaml  docker-compose.redis-ssl.yaml  docker-compose.yaml  implementation_plan.md  main.py  pyproject.toml  pytest.ini  remediated.md
.agent/rules/: database-operation.md  python-refactoring-and-codebase-update.md
.augment/rules/: database-operation.md  python-refactoring-and-codebase-update.md
.cursor/commands/: rules.md
.cursor/rules/: database.mdc  refactoring.mdc
.github/workflows/: cd.yml  ci.yml  test.yml
.idx/: dev.nix  mcp.json
.kilocode/: mcp.json
.kilocode/rules/: database-opration.md  python-refactoring-and-codebase-update.md
.qoder/rules/: database.md
.trae/rules/: project_rules.md
.windsurf/rules/: database.md  refactoring.md
alembic/: env.py  script.py.mako
alembic/versions/: 20251215_0001_initial_schema.py  20251218_2130_58283374f96c_add_role_column_to_users.py  20251218_2221_5f3ec632a8e7_add_display_name_to_users.py  20260129_0001_add_reviews_and_blog_videos.py  20260206_0926_29cb6c6a497a_add_user_testimonial_column.py  20260210_1812_7f50ddc7ccb6_blog_content_varchar_to_text.py  20260211_1711_remove_is_active_from_users.py  20260213_2142_aa3094bd711d_add_timezone_to_models.py  20260217_1426_62fc3efa8fe0_remove_timezone_from_blogs_reviews.py
app/: __init__.py  dependencies.py  main.py  serializer.py  statistics.py
app/auth/: __init__.py  permissions.py
app/clients/: __init__.py  ai_client.py  email_client.py  memory_client.py  redis_client.py
app/configs/: __init__.py  ai.py  argon2.py  cache.py  config.py  constants.py  limiter.py  redis.py  security.py  settings.py
app/context/: __init__.py
app/data/: __init__.py  statistics.py
app/db/: __init__.py  database.py  init_db.py
app/decorators/: __init__.py  caching.py  decorators.py  idempotent.py  metrics.py  permissions.py  with_retry.py
app/dependencies/: __init__.py  dependencies.py
app/errors/: __init__.py  ai.py  auth.py  base.py  cache.py  circuit_breaker.py  database.py  email.py  exceptions.py  idempotency.py  password_hasher.py  upload.py  validation.py
app/interfaces/: __init__.py  cache_client.py  idempotency_store.py
app/logging/: __init__.py  logging.py
app/managers/: __init__.py  cache_manager.py  circuit_breaker.py  idempotency_manager.py  login_attempt_tracker.py  metrics.py  password_manager.py  rate_limiter.py  token_blacklist.py  token_manager.py
app/media/: __init__.py  local.py
app/middleware/: __init__.py  context.py  idempotency.py  middleware.py  timezone.py
app/models/: __init__.py  blog.py  review.py  user.py
app/monitoring/: __init__.py  health.py  logging.py  prometheus.py  tracing.py
app/rabc/: __init__.py  permissions.py
app/repositories/: __init__.py  base.py  blog.py  review.py  user.py
app/routes/: __init__.py  admin.py  ai.py  auth.py  blog.py  cache.py  email.py  health.py  items.py  limiter.py  oauth.py  review.py  user.py
app/schemas/: __init__.py  admin.py  ai.py  auth.py  blog.py  cache.py  datetime.py  email.py  idempotency.py  items.py  limiter.py  review.py  user.py
app/services/: __init__.py  auth.py  chatbot.py  email_inquiry.py  email_template.py  email_template_builder.py  geo_timezone.py  itinerary.py  media.py  profile_picture.py
app/stores/: __init__.py  idempotency.py
app/types/: types.py
app/utils/: __init__.py  cache_keys.py  cache_serialiazer.py  cache_serializer.py  helpers.py  timezone.py
auto/: __init__.py  create_admin.py  send_email.py  setup_token.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  POSTGRES_DB_IMPROVE.md  QUICKSTART.md  RBAC_SUMMARY.md  USER_MEDIA.md  USER_PROFILE_PICTURE.md  add_testimonial.md  metrics.md
docs/analysis/: DUPLICATION_CREATION.md  baserepository.md
docs/api/: oauth_httpie_collection.sh
docs/features/: OAUTH.md  RBAC.md  USER_MEDIA.md  USER_PROFILE_PICTURE.md  add_testimonial.md  email_verification.html  email_verification.md
docs/git_crypt/: GIT_CRYPT.md
docs/implementations/: DATA_VISUALIZATION.md  ERROR_MESSAGE.md  MONITORING.md  TIMEZONE.md  idempotency.md
docs/improvements/: IMPROVEMENTS.md
docs/plan/: DUPLICATION_IMPROVEMENT.md  duplication_improvements.md  github_ci_cd.md  idempotency.md
docs/production/: REDIS.md
docs/prompts/: COMPREHENSIVE_MONITORING.md  IDEMPOTENCY.md  POSTGRES_DB_IMPROVE.md  audit_report.xml
docs/rules/: claudinary_trasnformation_rules.md  commit_message.md  database_updates.md  genai_sdk.md  python-refactoring-and-codebase-update.md  review.md
docs/summaries/: RBAC_SUMMARY.md
docs/workflow/: ALEMBIC_WORKFLOW.md  IDX_WORKFLOW.md  dockerfile_doc.md  git_crypt.md  github_ci_cd.md
migrations/: env.py
monitoring/: otel-collector-config.yaml  prometheus.yml
plans/: IDEMPOTENCY_IMPLEMENTATION_PLAN.md
scripts/: clean_browser.sh  generate-redis-certs.sh  migrate.sh  run.sh  run_idx.sh  setup-git-crypt.sh  start-prod.sh  verify_neon.py
scripts/api/: README.md  oauth_postman_collection.json
secrets/: .env  client_secret.json  token.json
tests/: TESTING_GUIDE.md  conftest.py  test_api.py  test_cache_manager.py  test_memory_client.py
tests/auth/: conftest.py  test_auth_errors.py  test_auth_routes.py  test_auth_schemas.py  test_auth_service.py  test_login_attempt_tracker.py  test_oauth.py  test_permissions.py  test_registration_flow.py  test_token_blacklist.py  test_token_manager.py
tests/cache/: conftest.py  test_api.py  test_cache_manager.py  test_memory_client.py
tests/clients/: conftest.py  test_ai_client.py  test_email_service.py  test_endpoints.py  test_protocols.py  test_redis_client.py
tests/decorators/: __init__.py  test_caching.py
tests/errors/: __init__.py  (+4 more)
(+80 files in other folders)
